--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <article class="one">
             <h5 class="article-date">april 18, 2022</h5>
             <h2>dfhgdfghdffffffffffffffffffffffffffffffffffffffff</h2>
-            <h3><b>Green Bay Packers</b> fritstilede LB <a href="https://www.nfl.com/players/za-darius-smith/" target="_blank">Za'Darius Smith</a> i marts og han har nu skrevet en 3 års kontrakt med <b>Minnesota Vikings</b>.</h3>
+            <h3><b>Gutyuiuiuityityuiuityuityuiytui</b> fritstilede LB <a href="https://www.nfl.com/players/za-darius-smith/" target="_blank">Za'Darius Smith</a> i marts og han har nu skrevet en 3 års kontrakt med <b>Minnesota Vikings</b>.</h3>
             <figure>
                 <img src="images/zadarius_smith_001.jpeg" alt="Za'Darius Smith">
                 <figcaption>Za'darius Smith da han stadig spillede med oste-hjelm på.</figcaption>
