--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <main id="item-c">
         <div id="nested-grid">
             <article class="one">
-            <h5 class="article-date">april 18, 2022</h5>
-            <h2>dfhgdfghdffffffffffffffffffffffffffffffffffffffff</h2>
-            <h3><b>Gutyuiuiuityityuiuityuityuiytui</b> fritstilede LB <a href="https://www.nfl.com/players/za-darius-smith/" target="_blank">Za'Darius Smith</a> i marts og han har nu skrevet en 3 års kontrakt med <b>Mfhgfhdghfdghdfghfdghgfdhfghdfghdfgh</b>.</h3>
+            <h5 class="article-date">januar 21, 2023</h5>
+            <h2>Vikings offensive line</h2>
+            <h3>På trods af de mange skader Vikings havde i 2022 sæsonen, var deres raske offensive line ikke dygtig nok. Derfor vil Vikings nok kigge draften godt igennem for at kunne forbedre den. Her er 3 muligheder:</h3>
             <figure>
                 <img src="images/zadarius_smith_001.jpeg" alt="Za'Darius Smith">
                 <figcaption>Za'darius Smith da han stadig spillede med oste-hjelm på.</figcaption>
