--- a/index.html
+++ b/index.html
@@ -1,142 +1,54 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <title>Minnesota Vikings Nyheder</title>
+    <title>Minnesota Vikings blog</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container">
-        <!-- HER BEGYNDER HEADER -->
-        <header id="item-a">
-                <img id="image-header" src="images/header_bg.png">
-        </header>
-        <!-- HER BEGYNDER SIDEBAR -->
-        <nav id="item-b">
-            <ul>
-                <li>
-                    <p><a href="#">ROSTER</a></p>
-                </li>
-                <li>
-                    <p><a href="#">DRAFT</a></p>
-                </li>
-                <li>
-                    <p><a href="#">KAMPE</a></p>
-                </li>
-                <li>
-                    <p><a href="#">ARTIKLER</a></p>
-                </li>
-                <li>
-                    <p><a href="#">HISTORIE</a></p>
-                </li>
-                <li>
-                    <p><a href="#">DIVERSE</a></p>
-                </li>
-            </ul>
-        </nav>
-        <!-- HER BEGYNDER MAIN -->
-        <main id="item-c">
-        <div id="nested-grid">
-            <article class="one">
-            <h5 class="article-date">januar 21, 2023</h5>
-            <h2>Vikings offensive line</h2>
-            <h3>På trods af de mange skader Vikings havde i 2022 sæsonen, var deres raske offensive line ikke dygtig nok. Derfor vil Vikings nok kigge draften godt igennem for at kunne forbedre den. Her er 3 muligheder:</h3>
-            <figure>
-                <img src="images/tyler_linderbaum_001.jpg" alt="Tyler Linderbaum">
-                <figcaption>Tyler Linderbaum er tidligere wrestler, så power har han nok af.</figcaption>
-            </figure>
-            <p><b>Center, Tyler Linderbaum -</b> Hvis Vikings vælger at drafte Linderbaum, så vil det nok være for at erstatte Garrett Bradbury, som ikke har haft en særlig god sæson for Vikings. Det kan også være en mulighed at Linderbaum slet ikke skal spille center positionen, men som guard.<br><br></p>
-            <figure>
-                <img src="images/zion_johnson_001.jpg" alt="Zion Johnson">
-                <figcaption>Zion Johnson</figcaption>
-            </figure>
-            <p><b>Guard, Zion Johnson -</b> Johnson er spået til at være et 1 valgs draft pick. Han kan være en spiller, der kan komme til med det samme, da Vikings har et akut mangel på guards.
-            <br><br></p>   
-            <figure>
-                <img src="images/kenyon_green_001.jfif" alt="Kenyon Green">
-                <figcaption>Kenyon Green</figcaption>
-            </figure>
-            <p><b>Guard, Kenyon Green -</b> En stor og eksplosiv spiller, som også har pontiale til at kunne spille på andre positioner end guard. Han har også spillet som takle i college.
-            <br><br></p>
-            </article>
-            <article class="one">
-                <h5 class="article-date">januar 21, 2023</h5>
-                <h2>Vikings offensive line</h2>
-                <h3>På trods af de mange skader Vikings havde i 2022 sæsonen, var deres raske offensive line ikke dygtig nok. Derfor vil Vikings nok kigge draften godt igennem for at kunne forbedre den. Her er 3 muligheder:</h3>
-                <figure>
-                    <img src="images/tyler_linderbaum_001.jpg" alt="Tyler Linderbaum">
-                    <figcaption>Tyler Linderbaum er tidligere wrestler, så power har han nok af.</figcaption>
-                </figure>
-                <p><b>Center, Tyler Linderbaum -</b> Hvis Vikings vælger at drafte Linderbaum, så vil det nok være for at erstatte Garrett Bradbury, som ikke har haft en særlig god sæson for Vikings. Det kan også være en mulighed at Linderbaum slet ikke skal spille center positionen, men som guard.<br><br></p>
-                <figure>
-                    <img src="images/zion_johnson_001.jpg" alt="Zion Johnson">
-                    <figcaption>Zion Johnson</figcaption>
-                </figure>
-                <p><b>Guard, Zion Johnson -</b> Johnson er spået til at være et 1 valgs draft pick. Han kan være en spiller, der kan komme til med det samme, da Vikings har et akut mangel på guards.
-                <br><br></p>
-                <figure>
-                    <img src="images/kenyon_green_001.jfif" alt="Kenyon Green">
-                    <figcaption>Kenyon Green</figcaption>
-                </figure>
-                <p><b>Guard, Kenyon Green -</b> En stor og eksplosiv spiller, som også har pontiale til at kunne spille på andre positioner end guard. Han har også spillet som takle i college.
-                <br><br></p>
-                </article>
-                <article class="one">
-                    <h5 class="article-date">januar 21, 2023</h5>
-                    <h2>Vikings offensive line</h2>
-                    <h3>På trods af de mange skader Vikings havde i 2022 sæsonen, var deres raske offensive line ikke dygtig nok. Derfor vil Vikings nok kigge draften godt igennem for at kunne forbedre den. Her er 3 muligheder:</h3>
-                    <figure>
-                        <img src="images/tyler_linderbaum_001.jpg" alt="Tyler Linderbaum">
-                        <figcaption>Tyler Linderbaum er tidligere wrestler, så power har han nok af.</figcaption>
-                    </figure>
-                    <p><b>Center, Tyler Linderbaum -</b> Hvis Vikings vælger at drafte Linderbaum, så vil det nok være for at erstatte Garrett Bradbury, som ikke har haft en særlig god sæson for Vikings. Det kan også være en mulighed at Linderbaum slet ikke skal spille center positionen, men som guard.<br><br></p>
-                    <figure>
-                        <img src="images/zion_johnson_001.jpg" alt="Zion Johnson">
-                        <figcaption>Zion Johnson</figcaption>
-                    </figure>
-                    <p><b>Guard, Zion Johnson -</b> Johnson er spået til at være et 1 valgs draft pick. Han kan være en spiller, der kan komme til med det samme, da Vikings har et akut mangel på guards.
-                    <br><br></p>
-                    <figure>
-                        <img src="images/kenyon_green_001.jfif" alt="Kenyon Green">
-                        <figcaption>Kenyon Green</figcaption>
-                    </figure>
-                    <p><b>Guard, Kenyon Green -</b> En stor og eksplosiv spiller, som også har pontiale til at kunne spille på andre positioner end guard. Han har også spillet som takle i college.
-                    <br><br></p>
-                    </article>
-                    <article class="one">
-                        <h5 class="article-date">januar 21, 2023</h5>
-                        <h2>Vikings offensive line</h2>
-                        <h3>På trods af de mange skader Vikings havde i 2022 sæsonen, var deres raske offensive line ikke dygtig nok. Derfor vil Vikings nok kigge draften godt igennem for at kunne forbedre den. Her er 3 muligheder:</h3>
-                        <figure>
-                            <img src="images/tyler_linderbaum_001.jpg" alt="Tyler Linderbaum">
-                            <figcaption>Tyler Linderbaum er tidligere wrestler, så power har han nok af.</figcaption>
-                        </figure>
-                        <p><b>Center, Tyler Linderbaum -</b> Hvis Vikings vælger at drafte Linderbaum, så vil det nok være for at erstatte Garrett Bradbury, som ikke har haft en særlig god sæson for Vikings. Det kan også være en mulighed at Linderbaum slet ikke skal spille center positionen, men som guard.<br><br></p>
-                        <figure>
-                            <img src="images/zion_johnson_001.jpg" alt="Zion Johnson">
-                            <figcaption>Zion Johnson</figcaption>
-                        </figure>
-                        <p><b>Guard, Zion Johnson -</b> Johnson er spået til at være et 1 valgs draft pick. Han kan være en spiller, der kan komme til med det samme, da Vikings har et akut mangel på guards.
-                        <br><br></p>
-                        <figure>
-                            <img src="images/kenyon_green_001.jfif" alt="Kenyon Green">
-                            <figcaption>Kenyon Green</figcaption>
-                        </figure>
-                        <p><b>Guard, Kenyon Green -</b> En stor og eksplosiv spiller, som også har pontiale til at kunne spille på andre positioner end guard. Han har også spillet som takle i college.
-                        <br><br></p>
-                        </article>
-        </div>
-        </main>
-        <!-- HER BEGYNDER ASIDE -->
-        <aside id="item-d">
-            <ul>
-                <li>
-                    <p><b>Minnesota Vikings relaterede links:</b>
-                        <a href="http://www.vikings.com">Vikings.com</a></p>
-                </li>
-            </ul>
-        </aside>
-        <!-- HER BEGYNDER FOOTER -->
-        <footer id="item-e">
-            <p>Dette er footer arealet</p>
-        </footer>
+
+<div class="grid-container">
+    <!-- start header -->
+    <div class="grid-item header">
+        <div><img class="img" src="images/header_bg.png"></div>
     </div>
+    <!-- start navmenu -->
+    <div class="grid-item navmenu">
+        <ul>
+            <li><p><a href="#">ROSTER</a></p></li>
+            <li><p><a href="#">DRAFT</a></p></li>
+            <li><p><a href="#">KAMPE</a></p></li>
+            <li><p><a href="#">ARTIKLER</a></p></li>
+            <li><p><a href="#">HISTORIE</a></p></li>
+            <li><p><a href="#">DIVERSE</a></p></li>
+        </ul>
+    </div>
+    <!-- start main -->
+    <div class="grid-item main">
+        <article class="news">
+            <h2>Vikings Draft Preview 2023</h2>
+            <figure><img class="img" src="images/tyler_linderbaum_001.jpg"></figure>
+            <p>Vikings offensive linje har tidligere set værre ud end den gør lige nu, men for at give Kirk Cousins bedre beskyttelse (han blev sacket 46 gange i 22/23 sæsonen), så gør Vikings klogt i af drafte en guard i denne års draft. Udover det, så har deres center postion være meget omtalt i den netop afsluttede sæson, og ikke på en positiv måde. Derfor er der mulighed for at Vikings vælger at bruge nogen af deres ?? draft picks på én af disse 3 personer:</p>
+            <h3>No.1 - Tyler Linderbaum, Center</h3>
+            <p class="info">Tidligere bryder hvilket gør, at han kan bruge teknikker fra brydningen til bedre at vinde sine modstanders blokeringer. Han vil formentlig blive draftet som en center, så hvis Vikings ikke beholder Bradbury - som jo havde en dårlig sæson - kan Linderbaum ligne et godt pick for dem.</p>
+            <h3>No. 2 - Zion Johnson, Guard</h3>
+            <p class="info">Johnson er spået til at blive et 1st runde pick. Han er ikke den mest atletiske guard i draften, men han ville kunne bruges til Vikings OL med den kommende sæson.</p>
+            <h3>No. 3 - Kenyon Green, Guard</h3>
+            <p class="info">En eksplosiv og atletisk guard, som kan spille på postion guard og tackle.</p>
+            <p>Hvem Vikings vælger for vi at se d. vælg dato.</p>
+            <h5>Artiklen er skrevet d. 1 marts 2023</h5>
+        </article>
+    </div>
+    <!-- start sidebar -->
+    <div class="grid-item sidebar">
+        <ul>
+            <li><p><a href="www.vikings.com" target="_blank">Vikings.com</a></p></li>
+            <li><p><a href="www.vikings.com" target="_blank">Vikings.com</a></p></li>
+            <li><p><a href="www.vikings.com" target="_blank">Vikings.com</a></p></li>
+        </ul>
+    </div>
+    <!-- start footer -->
+    <div class="grid-item footer">footer</div>
+</div>
+
 </body>
+</html>
