--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
     <div class="grid-item main">
         <article class="news">
             <h2>Vikings Draft Preview 2023</h2>
-            <figure><img class="img" src="images/tyler_linderbaum_001.jpg"></figure>
             <p>Vikings offensive linje har tidligere set værre ud end den gør lige nu, men for at give Kirk Cousins bedre beskyttelse (han blev sacket 46 gange i 22/23 sæsonen), så gør Vikings klogt i af drafte en guard i denne års draft. Udover det, så har deres center postion være meget omtalt i den netop afsluttede sæson, og ikke på en positiv måde. Derfor er der mulighed for at Vikings vælger at bruge nogen af deres ?? draft picks på én af disse 3 personer:</p>
             <h3>No.1 - Tyler Linderbaum, Center</h3>
+            <figure><img class="img" src="images/tyler_linderbaum_001.jpg"></figure>
             <p class="info">Tidligere bryder hvilket gør, at han kan bruge teknikker fra brydningen til bedre at vinde sine modstanders blokeringer. Han vil formentlig blive draftet som en center, så hvis Vikings ikke beholder Bradbury - som jo havde en dårlig sæson - kan Linderbaum ligne et godt pick for dem.</p>
             <h3>No. 2 - Zion Johnson, Guard</h3>
+            <figure><img class="img" src="images/zion_johnson_001.jpg"></figure>
             <p class="info">Johnson er spået til at blive et 1st runde pick. Han er ikke den mest atletiske guard i draften, men han ville kunne bruges til Vikings OL med den kommende sæson.</p>
             <h3>No. 3 - Kenyon Green, Guard</h3>
+            <figure><img class="img" src="images/kenyon_green_001.jpg"></figure>
             <p class="info">En eksplosiv og atletisk guard, som kan spille på postion guard og tackle.</p>
             <p>Hvem Vikings vælger for vi at se d. vælg dato.</p>
             <h5>Artiklen er skrevet d. 1 marts 2023</h5>
