--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <div class="grid-item main">
         <article class="news">
             <h2>Vikings Draft Preview 2023</h2>
-            <p>Vikings offensive linje har tidligere set værre ud end den gør lige nu, men for at give Kirk Cousins bedre beskyttelse (han blev sacket 46 gange i 22/23 sæsonen), så gør Vikings klogt i af drafte en guard i denne års draft. Udover det, så har deres center postion være meget omtalt i den netop afsluttede sæson, og ikke på en positiv måde. Derfor er der mulighed for at Vikings vælger at bruge nogen af deres ?? draft picks på én af disse 3 personer:</p>
-            <h3>No.1 - Tyler Linderbaum, Center</h3>
+            <p>Vikings har pick nr. 24 (men som egentlig er pick 23, fordi Dolphins har fået fjernet deres pick som straf for kontakt til Tom Brady i forrige sæson) i 1 runde i draften 2023 og man regner med, at de vil vælge en cornerback. Men der er andre positioner, som ville være fornuftige for Vikings at kigge på i i draften. Deres offensive linje har tidligere set værre ud end den gør lige nu, men for at give Kirk Cousins bedre beskyttelse (han blev sacket 46 gange i 22/23 sæsonen), så gør Vikings klogt i af drafte en guard i denne års draft. Udover det, så har deres center postion være meget omtalt i den netop afsluttede sæson, og ikke på en positiv måde. Derfor er der mulighed for at Vikings vælger at bruge nogen af deres ?? draft picks på én af disse 3 personer:</p>
+            <h3>1 - Tyler Linderbaum, Center</h3>
             <figure><img class="img" src="images/tyler_linderbaum_001.jpg"></figure>
             <p class="info">Tidligere bryder hvilket gør, at han kan bruge teknikker fra brydningen til bedre at vinde sine modstanders blokeringer. Han vil formentlig blive draftet som en center, så hvis Vikings ikke beholder Bradbury - som jo havde en dårlig sæson - kan Linderbaum ligne et godt pick for dem.</p>
-            <h3>No. 2 - Zion Johnson, Guard</h3>
+            <h3>2 - Zion Johnson, Guard</h3>
             <figure><img class="img" src="images/zion_johnson_001.jpg"></figure>
             <p class="info">Johnson er spået til at blive et 1st runde pick. Han er ikke den mest atletiske guard i draften, men han ville kunne bruges til Vikings OL med den kommende sæson.</p>
-            <h3>No. 3 - Kenyon Green, Guard</h3>
+            <h3>3 - Kenyon Green, Guard</h3>
             <figure><img class="img" src="images/kenyon_green_001.jpg"></figure>
             <p class="info">En eksplosiv og atletisk guard, som kan spille på postion guard og tackle.</p>
-            <p>Hvem Vikings vælger for vi at se d. vælg dato.</p>
+            <p>Udover pick nr. 24 (23) i runde 1 har Vikings picks i 3, 4 og 5 runde. Baggrunden for, at de ikke har flere picks til rådighed i år er bl.a. fordi, at de tradede sig til T.J. Hokenson sidste sæson. Hvem Vikings vælger, ja det vil vise sig når draften går i gang d. 27 april i Kansas City. </p>
             <h5>Artiklen er skrevet d. 1 marts 2023</h5>
         </article>
     </div>
