--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="grid-item main">
         <article class="news">
             <h2>Vikings Draft Preview 2023</h2>
-            <p>Vikings har pick nr. 24 (men som egentlig er pick 23, fordi Dolphins har fået fjernet deres pick som straf for kontakt til Tom Brady i forrige sæson) i 1 runde i draften 2023 og man regner med, at de vil vælge en cornerback. Men der er andre positioner, som ville være fornuftige for Vikings at kigge på i i draften. Deres offensive linje har tidligere set værre ud end den gør lige nu, men for at give Kirk Cousins bedre beskyttelse (han blev sacket 46 gange i 22/23 sæsonen), så gør Vikings klogt i af drafte en guard i denne års draft. Udover det, så har deres center postion være meget omtalt i den netop afsluttede sæson, og ikke på en positiv måde. Derfor er der mulighed for at Vikings vælger at bruge nogen af deres ?? draft picks på én af disse 3 personer:</p>
+            <p>Vikings har pick nr. 24 (men som egentlig er pick 23, fordi Dolphins har fået fjernet deres pick som straf for kontakt til Tom Brady i forrige sæson) i 1 runde i draften 2023 og man regner med, at de vil vælge en cornerback. Men der er andre positioner, som ville være fornuftige for Vikings at kigge på i i draften. <p>Deres offensive linje har tidligere set værre ud end den gør lige nu, men for at give Kirk Cousins bedre beskyttelse (han blev sacket 46 gange i 22/23 sæsonen), så gør Vikings klogt i af drafte en guard i denne års draft.</p><p>Udover det, så har deres center postion være meget omtalt i den netop afsluttede sæson, og ikke på en positiv måde. Derfor er der mulighed for at Vikings vælger at bruge nogen af deres draft picks på én af disse 3 personer:</p>
             <h3>1 - Tyler Linderbaum, Center</h3>
             <figure><img class="img" src="images/tyler_linderbaum_001.jpg"></figure>
             <p class="info">Tidligere bryder hvilket gør, at han kan bruge teknikker fra brydningen til bedre at vinde sine modstanders blokeringer. Han vil formentlig blive draftet som en center, så hvis Vikings ikke beholder Bradbury - som jo havde en dårlig sæson - kan Linderbaum ligne et godt pick for dem.</p>
             <h3>2 - Zion Johnson, Guard</h3>
             <figure><img class="img" src="images/zion_johnson_001.jpg"></figure>
-            <p class="info">Johnson er spået til at blive et 1st runde pick. Han er ikke den mest atletiske guard i draften, men han ville kunne bruges til Vikings OL med den kommende sæson.</p>
+            <p class="info">Johnson er spået til at blive et 1st runde pick. Han er ikke den mest atletiske guard i draften, men han ville kunne bruges til Vikings OL med det samme i den kommende sæson.</p>
             <h3>3 - Kenyon Green, Guard</h3>
             <figure><img class="img" src="images/kenyon_green_001.jpg"></figure>
             <p class="info">En eksplosiv og atletisk guard, som kan spille på postion guard og tackle.</p>
@@ -42,14 +42,16 @@
     </div>
     <!-- start sidebar -->
     <div class="grid-item sidebar">
+        <h4>Mere info:</h4>
         <ul>
-            <li><p><a href="www.vikings.com" target="_blank">Vikings.com</a></p></li>
-            <li><p><a href="www.vikings.com" target="_blank">Vikings.com</a></p></li>
-            <li><p><a href="www.vikings.com" target="_blank">Vikings.com</a></p></li>
+            <li><a href="www.vikings.com" target="_blank">Vikings.com</a></li>
+            <li><a href="https://www.espn.com/nfl/team/_/name/min/minnesota-vikings" target="_blank">ESPN</a></li>
+            <li><a href="https://www.nfl.com/teams/minnesota-vikings/" target="_blank">NFL</a></li>
+            <li><a href="https://profootballtalk.nbcsports.com/category/teams/nfc/minnesota-vikings/" target="_blank">NBC PFT</a></li>
         </ul>
     </div>
     <!-- start footer -->
-    <div class="grid-item footer">footer</div>
+    <div class="grid-item footer">© Copyright Morten R. Andersen 2023</div>
 </div>
 
 </body>
