--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
             <p>Udover pick nr. 24 (23) i runde 1 har Vikings picks i 3, 4 og 5 runde. Baggrunden for, at de ikke har flere picks til rådighed i år er bl.a. fordi, at de tradede sig til T.J. Hokenson sidste sæson. Hvem Vikings vælger, ja det vil vise sig når draften går i gang d. 27 april i Kansas City. </p>
             <h5>Artiklen er skrevet d. 1 marts 2023</h5>
         </article>
+
+        <article class="news">
+            <h2>Hvem er Brian Flores?</h2>
+            <p class="info">Vikings har erstattet deres defensive coordinator Ed Donatell med Brian Flores</p>
+            <h3>Brian Flores NFL CV:</h3>
+            <p class="info">Tekst kommer...</p>
+            <figure><img class="img" src="images/brian_flores_001.jpg"></figure>
+
+            <h5>Artiklen er skrevet d. </h5>
+        </article>
+
     </div>
     <!-- start sidebar -->
     <div class="grid-item sidebar">
