--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <ol>
                     <li><p>Han blev hyret af New England Patriots i 2004 som scouting assistant, han var 23 år. Han var ansat i scouting afdeling i 4 sæsoner, hvor i en af dem Patriots vandt en super bowl.</p></li>
                     <li><p>Han blev forfremmet til special teams assistant for Patriots i 2008 og i hans videre ansættelse ved Patriots var han også linebackers træner og "de facto" defensive coordinator i Patriots 2018 Super Bowl vindende sæson.</p></li>
+                    <li><p>Flores kender Vikings headcoach Kevin O'Connell, da Patriots draftede O'Connells som deres 94 valg i 2008 draften.</p></li>
+                    <!-- https://vikingswire.usatoday.com/lists/vikings-patriots-dolphins-brian-flores-kevin-oconnell-bill-belichick/ -->
                 </ol>
             </p>
             <h5>Artiklen er skrevet d. </h5>
