--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
 
         <article class="news">
             <h2>Hvem er Brian Flores?</h2>
-            <figure><img class="img" src="images/brian_flores_001.jpg"></figure>
-            <p class="info">Vikings har erstattet deres defensive coordinator Ed Donatell med Brian Flores. Mange husker ham måske for, at være den mand, som sagsøgte 3 af de 32 NFL hold for racisme og forskels behandlig i forbindelse med jobsøgninger i ligaen. Men har er heldigvis også kendt for andre ting. </p>
+            <p>Vikings har erstattet deres defensive coordinator Ed Donatell med Brian Flores. Mange husker ham måske for, at være den mand, som sagsøgte 3 af de 32 NFL hold for racisme og forskels behandlig i forbindelse med jobsøgninger i ligaen. Men har er heldigvis også kendt for andre ting. </p>
             <h3>Brian Flores NFL CV:</h3>
-            <p class="info">
-                <ol>
-                    <li><p>Han blev hyret af New England Patriots i 2004 som scouting assistant, han var 23 år. Han var ansat i scouting afdeling i 4 sæsoner, hvor i en af dem Patriots vandt en super bowl.</p></li>
-                    <li><p>Han blev forfremmet til special teams assistant for Patriots i 2008 og i hans videre ansættelse ved Patriots var han også linebackers træner og "de facto" defensive coordinator i Patriots 2018 Super Bowl vindende sæson.</p></li>
-                    <li><p>Flores kender Vikings headcoach Kevin O'Connell, da Patriots draftede O'Connells som deres 94 valg i 2008 draften.</p></li>
-                    <!-- https://vikingswire.usatoday.com/lists/vikings-patriots-dolphins-brian-flores-kevin-oconnell-bill-belichick/ -->
-                </ol>
-            </p>
+            <figure><img class="img" src="images/brian_flores_001.jpg"></figure>
+            <ol>
+                <li>Han blev hyret af New England Patriots i 2004 som scouting assistant, han var 23 år. Han var ansat i scouting afdeling i 4 sæsoner, hvor i en af dem Patriots vandt en super bowl.</li>
+                <li>Han blev forfremmet til special teams assistant for Patriots i 2008 og i hans videre ansættelse ved Patriots var han også linebackers træner og "de facto" defensive coordinator i Patriots 2018 Super Bowl vindende sæson.</li>
+            </ol><!-- https://vikingswire.usatoday.com/lists/vikings-patriots-dolphins-brian-flores-kevin-oconnell-bill-belichick/ -->
             <h5>Artiklen er skrevet d. </h5>
         </article>
 
