--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>Vikings har erstattet deres defensive coordinator Ed Donatell med Brian Flores. Mange husker ham måske for, at være den mand, som sagsøgte 3 af de 32 NFL hold for racisme og forskels behandlig i forbindelse med jobsøgninger i ligaen. Men har er heldigvis også kendt for andre ting. </p>
             <h3>Brian Flores NFL CV:</h3>
             <figure><img class="img" src="images/brian_flores_001.jpg"></figure>
-            <ol>
+            <ol class="info">
                 <li>Han blev hyret af New England Patriots i 2004 som scouting assistant, han var 23 år. Han var ansat i scouting afdeling i 4 sæsoner, hvor i en af dem Patriots vandt en super bowl.</li>
                 <li>Han blev forfremmet til special teams assistant for Patriots i 2008 og i hans videre ansættelse ved Patriots var han også linebackers træner og "de facto" defensive coordinator i Patriots 2018 Super Bowl vindende sæson.</li>
             </ol><!-- https://vikingswire.usatoday.com/lists/vikings-patriots-dolphins-brian-flores-kevin-oconnell-bill-belichick/ -->
