--- a/index.html
+++ b/index.html
@@ -14,16 +14,29 @@
     <!-- start navmenu -->
     <div class="grid-item navmenu">
         <ul>
-            <li><p><a href="#">ROSTER</a></p></li>
-            <li><p><a href="#">DRAFT</a></p></li>
-            <li><p><a href="#">KAMPE</a></p></li>
+            <li><p><a href="https://www.espn.com/nfl/team/roster/_/name/min/minnesota-vikings" target="_blank">ROSTER</a></p></li>
+            <li><p><a href="https://www.vikings.com/draft/" target="_blank">DRAFT</a></p></li>
+            <li><p><a href="https://www.espn.com/nfl/team/schedule/_/name/min/minnesota-vikings" target="_blank">KAMPE</a></p></li>
             <li><p><a href="#">ARTIKLER</a></p></li>
-            <li><p><a href="#">HISTORIE</a></p></li>
+            <li><p><a href="https://www.vikings.com/team/legends/timeline" target="_blank">HISTORIE</a></p></li>
             <li><p><a href="#">DIVERSE</a></p></li>
         </ul>
     </div>
     <!-- start main -->
     <div class="grid-item main">
+
+        <article class="news">
+            <h2>Vikings fritstiller Eric Kendricks</h2>
+            <figure><img class="img" src="images/eric_kendricks_001.jpg"></figure>
+            <p class="info">Kendricks har spillet sin ottende og sidste sæson for Vikings i denne omgang. Han blev valgt i anden runde af 2015 draften og har siden dag spillet 113 kampe for Vikings.</p>
+            <p class="info">Den 31 årige linebacker er blevet fritstillet for at gøre plads i lønloftet hos Vikings. Ud af de 8 sæsoner, sluttede han de syv af dem som førende tackler på holdet, så han er en spiller, der har ydet et kæmpe bidrag til Vikings forsvar og han vil helt sikkert blive savnet.</p>
+            <blockquote class="twitter-tweet">
+                <a href="https://twitter.com/Vikings/status/1632811281010036737?s=20"></a> 
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
+            <h5>Artiklen er skrevet d. 8 marts 2023 </h5>
+        </article>
 
         <article class="news">
             <h2>Hvem er Brian Flores?</h2>
@@ -33,8 +46,10 @@
             <ol class="info">
                 <li>Han blev hyret af New England Patriots i 2004 som scouting assistant, han var 23 år. Han var ansat i scouting afdeling i 4 sæsoner, hvor i en af dem Patriots vandt en super bowl.</li>
                 <li>Han blev forfremmet til special teams assistant for Patriots i 2008 og i hans videre ansættelse ved Patriots var han også linebackers træner og "de facto" defensive coordinator i Patriots 2018 Super Bowl vindende sæson.</li>
-            </ol><!-- https://vikingswire.usatoday.com/lists/vikings-patriots-dolphins-brian-flores-kevin-oconnell-bill-belichick/ -->
-            <h5>Artiklen er skrevet d. </h5>
+                <li>Selvom Flores aldrig har været defensive coordinator før han landede jobbet hos Vikings, har han været defensive play caller i fire sæsoner - den første hos Patriots og de sidste tre hos Dolphins.</li>
+            </ol>
+            <p class="info">Det forventes at han vil være med til at skifte lidt ud blandt de nuværende trænere hos Vikings. Hans spil er ofte meget aggresive med masser af blitz, så måske henter han personale ind, som passer bedre til hans temperament.</p>
+            <h5>Artiklen er skrevet d. 8 marts 2023 </h5>
         </article>
 
         <article class="news">
@@ -58,6 +73,7 @@
         <h4>Mere info:</h4>
         <ul>
             <li><a href="www.vikings.com" target="_blank">Vikings.com</a></li>
+            <li><a href="https://www.startribune.com/sports/minnesota-vikings/" target="_blank">Startribune Vikings</a></li>
             <li><a href="https://www.espn.com/nfl/team/_/name/min/minnesota-vikings" target="_blank">ESPN</a></li>
             <li><a href="https://www.nfl.com/teams/minnesota-vikings/" target="_blank">NFL</a></li>
             <li><a href="https://profootballtalk.nbcsports.com/category/teams/nfc/minnesota-vikings/" target="_blank">NBC PFT</a></li>
