--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
     <div class="grid-item main">
 
         <article class="news">
+            <h2>Free Agency 2023</h2>
+            <p class="info">Her kommer info omkring hvilke ændringer Vikings har lavet i forbindelse med free agency perioden 15 - 17 marts 2023.</p>
+            <figure><img class="img" src="images/vikings_free_agency_001.jpg"></figure>
+            <h3>Vikings Free Agency handlinger:</h3>
+            <ol class="info">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+            <p class="info">Tekst</p>
+            <h5>Artiklen er skrevet d. dag måned år </h5>
+        </article>
+
+
+        <article class="news">
             <h2>Vikings fritstiller Eric Kendricks</h2>
             <figure><img class="img" src="images/eric_kendricks_001.jpg"></figure>
             <p class="info">Kendricks har spillet sin ottende og sidste sæson for Vikings i denne omgang. Han blev valgt i anden runde af 2015 draften og har siden dag spillet 113 kampe for Vikings.</p>
