--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- start main -->
     <div class="grid-item main">
 
-        <article class="news">
+        <!-- <article class="news">
             <h2>Free Agency 2023</h2>
             <p class="info">Her kommer info omkring hvilke ændringer Vikings har lavet i forbindelse med free agency perioden 15 - 17 marts 2023.</p>
             <figure><img class="img" src="images/vikings_free_agency_001.jpg"></figure>
@@ -36,6 +36,16 @@
                 <li></li>
                 <li></li>
             </ol>
+            <p class="info">Tekst</p>
+            <h5>Artiklen er skrevet d. dag måned år </h5>
+        </article> -->
+
+        <article class="news">
+            <h2>Adam Thielen fritstillet</h2>
+            <p class="info">Vikings har fået endnu mindre på lønloftet efter de i dag har fritstillet WR Adam Thielen.</p> 
+            <p>Thielen kom til Vikings i ?? som en undraftet free agent og arbejdede sig op til at blive en af de bedste wide recievers i Vikings franchise historie</p>
+            <figure><img class="img" src="images/adam_thielen_001.jpg"></figure>
+            <h3>Overskrift</h3>
             <p class="info">Tekst</p>
             <h5>Artiklen er skrevet d. dag måned år </h5>
         </article>
