--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
     <!-- start main -->
     <div class="grid-item main">
 
-        <!-- <article class="news">
             <h2>Free Agency 2023</h2>
-            <p class="info">Her kommer info omkring hvilke ændringer Vikings har lavet i forbindelse med free agency perioden 15 - 17 marts 2023.</p>
             <figure><img class="img" src="images/vikings_free_agency_001.jpg"></figure>
-            <h3>Vikings Free Agency handlinger:</h3>
+            <h3>Vikings Free Agencys højdepunkter:</h3>
             <ol class="info">
-                <li></li>
-                <li></li>
+                <li><p>Vikings har givet deres nummer 2 RB Alexander Mattison en ny kontrakt. Måske er det et tegn på at Cook ikke kommer til at spille for Vikings igen? Deres nr. 1 RB Dalvin Cook har været meget ustabil og skadet de seneste 2 sæsoner, så Vikings kan frigive en del penge på deres lønloft ved at beholde Mattison og give slip på Cook.</p></li>
+                <li><p>Vikings veteran og flere gange Pro Bowl safety Harrison "The Hitman" Smith er gået med til at gå ned i løn for at kunne bevare sin plads på Vikings holdet. Det kan vise sig at være en rigtig god beslutning at beholde ham på holdet, da han højst sandsyneligt vil fungere som mentor for Vikings top 2022 draft pick Lewis Cine, der var skadet hele sidste sæson.</p></li>
                 <li></li>
                 <li></li>
             </ol>
@@ -42,14 +40,13 @@
 
         <article class="news">
             <h2>Adam Thielen fritstillet</h2>
-            <p class="info">Vikings har fået endnu mindre på lønloftet efter de i dag har fritstillet WR Adam Thielen.</p> 
-            <p>Thielen kom til Vikings i ?? som en undraftet free agent og arbejdede sig op til at blive en af de bedste wide recievers i Vikings franchise historie</p>
+            <p class="info">Vikings har fået endnu mere plads på lønloftet efter de har fritstillet WR Adam Thielen. Han har været en stor del af deres offensive styrker de sidste mange år, så mange vil nok se det som et stort tab. Men Thielens sidste år hos Vikings var præget af mange skader.</p> 
+            <p>Thielen kom til Vikings i 2014 som en undraftet free agent og arbejdede sig op til at blive en af de bedste wide recievers i Vikings franchise historie. Han var en meget stabil reciever, som greb stort set alle bolde, der blev kastet hans vej og ikke mindre, holdte fast i den.</p>
             <figure><img class="img" src="images/adam_thielen_001.jpg"></figure>
             <h3>Overskrift</h3>
             <p class="info">Tekst</p>
             <h5>Artiklen er skrevet d. dag måned år </h5>
         </article>
-
 
         <article class="news">
             <h2>Vikings fritstiller Eric Kendricks</h2>
