--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ol>
             <p class="info">Tekst</p>
             <h5>Artiklen er skrevet d. dag måned år </h5>
-        </article> -->
+        </article>
 
         <article class="news">
             <h2>Adam Thielen fritstillet</h2>
