--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <!-- start main -->
     <div class="grid-item main">
-
+        <article>
             <h2>Free Agency 2023</h2>
             <figure><img class="img" src="images/vikings_free_agency_001.jpg"></figure>
             <h3>Vikings Free Agencys højdepunkter:</h3>
