--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </div>
     <!-- start main -->
     <div class="grid-item main">
-        <article>
+        <article class="news">
             <h2>Free Agency 2023</h2>
             <figure><img class="img" src="images/vikings_free_agency_001.jpg"></figure>
             <h3>Vikings Free Agencys højdepunkter:</h3>
             <ol class="info">
                 <li><p>Vikings har givet deres nr. 2 RB Alexander Mattison en ny kontrakt. Måske er det et tegn på at Cook ikke kommer til at spille for Vikings igen? Deres nr. 1 RB Dalvin Cook har været meget ustabil og skadet de seneste 2 sæsoner, så Vikings kan frigive en del penge på deres lønloft ved at beholde Mattison og give slip på Cook.</p></li>
                 <li><p>Vikings veteran og flere gange Pro Bowl safety Harrison "The Hitman" Smith er gået med til at gå ned i løn for at kunne bevare sin plads på Vikings holdet. Det kan vise sig at være en rigtig god beslutning at beholde ham på holdet, da han højst sandsyneligt vil fungere som mentor for Vikings top 2022 draft pick Lewis Cine, der var skadet hele sidste sæson.</p></li>
-                <li>Der er kommet en ny CB til Minnesota fra Cardinals ved navn Byron Murphy. Murphy blev draftet i 2019 af Cardinal som pick nr. 33. Han var skadet det meste af sidste sæson, men har ellers været en stabil og effektiv spiller for Arizona.</li>
+                <li><p>Der er kommet en ny CB til Minnesota fra Cardinals ved navn Byron Murphy. Murphy blev draftet i 2019 af Cardinal som pick nr. 33. Han var skadet det meste af sidste sæson, men har ellers været en stabil og effektiv spiller for Arizona.</p></li>
                 <li></li>
             </ol>
             <p class="info">Tekst</p>
