--- a/index.html
+++ b/index.html
@@ -26,15 +26,19 @@
     <div class="grid-item main">
 
         <article class="news">
-            <h2>Draft 2023</h2>
-            <figure><img class="img" src="images/vikings_free_agency_001.jpg"></figure>
-            <h3>Vikings draft picks:</h3>
-            <ol class="info">
-                <li><p>Vikings har givet deres nr. 2 RB Alexander Mattison en ny kontrakt. Måske er det et tegn på at Cook ikke kommer til at spille for Vikings igen? Deres nr. 1 RB Dalvin Cook har været meget ustabil og skadet de seneste 2 sæsoner, så Vikings kan frigive en del penge på deres lønloft ved at beholde Mattison og give slip på Cook.</p></li>
-                <li><p>Vikings veteran og flere gange Pro Bowl safety Harrison "The Hitman" Smith er gået med til at gå ned i løn for at kunne bevare sin plads på Vikings holdet. Det kan vise sig at være en rigtig god beslutning at beholde ham på holdet, da han højst sandsyneligt vil fungere som mentor for Vikings top 2022 draft pick Lewis Cine, der var skadet hele sidste sæson.</p></li>
-                <li><p>Der er kommet en ny CB til Minnesota fra Cardinals ved navn Byron Murphy. Murphy blev draftet i 2019 af Cardinal som pick nr. 33. Han var skadet det meste af sidste sæson, men har ellers været en stabil og effektiv spiller for Arizona.</p></li>
-            </ol>
-            <h5>Artiklen er skrevet d. 18 marts 2023 </h5>
+            <h2>Vikings Draft 2023</h2>
+            <p>Vikings tradede ikke op, så de kunne få en QB, der kan lærer et år bag Kirk Cousins, da det højst sandynligt er hans sidste sæson hos Vikings næste år. I stedet tog de en WR, som skal erstatte Thielen og kan supplere Justin Jefferson. Jeg havde håbet på en QB, da jeg synes at Osborn er en god reciever og Vikings ikke nødvendigvis har brug for en mere. Med deres nr. 2 pick tog de en CB.</p>
+            <h3>Pick 1 - Jordan Addison, WR</h3>
+            <figure><img class="img" src="images/jordan_addison_001.jpg"></figure>
+            <p class="info">Tidligere bryder hvilket gør, at han kan bruge teknikker fra brydningen til bedre at vinde sine modstanders blokeringer. Han vil formentlig blive draftet som en center, så hvis Vikings ikke beholder Bradbury - som jo havde en dårlig sæson - kan Linderbaum ligne et godt pick for dem.</p>
+            <h3>2 - Zion Johnson, Guard</h3>
+            <figure><img class="img" src="images/mekdi_blackmon_001.jpg"></figure>
+            <p class="info">Johnson er spået til at blive et 1st runde pick. Han er ikke den mest atletiske guard i draften, men han ville kunne bruges til Vikings OL med det samme i den kommende sæson.</p>
+            <h3>3 - Kenyon Green, Guard</h3>
+            <figure><img class="img" src="images/kenyon_green_001.jpg"></figure>
+            <p class="info">En eksplosiv og atletisk guard, som kan spille på postion guard og tackle.</p>
+            <p>Udover pick nr. 24 (23) i runde 1 har Vikings picks i 3, 4 og 5 runde. Baggrunden for, at de ikke har flere picks til rådighed i år er bl.a. fordi, at de tradede sig til T.J. Hokenson sidste sæson. Hvem Vikings vælger, ja det vil vise sig når draften går i gang d. 27 april i Kansas City. </p>
+            <h5>Artiklen er skrevet d. 1 marts 2023</h5>
         </article>
 
         <article class="news">
