--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
             <p>Vikings tradede ikke op, så de kunne få en QB, der kan lærer et år bag Kirk Cousins, da det højst sandynligt er hans sidste sæson hos Vikings næste år. I stedet tog de en WR, som skal erstatte Thielen og kan supplere Justin Jefferson. Jeg havde håbet på en QB, da jeg synes at Osborn er en god reciever og Vikings ikke nødvendigvis har brug for en mere. Med deres nr. 2 pick tog de en CB.</p>
             <h3>Pick 1 - Jordan Addison, WR</h3>
             <figure><img class="img" src="images/jordan_addison_001.jpg"></figure>
-            <p class="info">Tidligere bryder hvilket gør, at han kan bruge teknikker fra brydningen til bedre at vinde sine modstanders blokeringer. Han vil formentlig blive draftet som en center, så hvis Vikings ikke beholder Bradbury - som jo havde en dårlig sæson - kan Linderbaum ligne et godt pick for dem.</p>
-            <h3>2 - Zion Johnson, Guard</h3>
+            <p class="info">Er af mange blevet nævnt som den bedste reciever i årets draft. Han er ikke den højste eller hurtigste, men han løber gode ruter og vil være en god erstatning for Thielen, som var én af de bedste route runners i ligaen.</p>
+            <h3>Pick 2 - Mekdi Blackmon - CB</h3>
             <figure><img class="img" src="images/mekdi_blackmon_001.jpg"></figure>
             <p class="info">Johnson er spået til at blive et 1st runde pick. Han er ikke den mest atletiske guard i draften, men han ville kunne bruges til Vikings OL med det samme i den kommende sæson.</p>
-            <h3>3 - Kenyon Green, Guard</h3>
-            <figure><img class="img" src="images/kenyon_green_001.jpg"></figure>
+            <h3>Pick 3 - ??, ?</h3>
+            <figure><img class="img" src="images/###_001.jpg"></figure>
             <p class="info">En eksplosiv og atletisk guard, som kan spille på postion guard og tackle.</p>
             <p>Udover pick nr. 24 (23) i runde 1 har Vikings picks i 3, 4 og 5 runde. Baggrunden for, at de ikke har flere picks til rådighed i år er bl.a. fordi, at de tradede sig til T.J. Hokenson sidste sæson. Hvem Vikings vælger, ja det vil vise sig når draften går i gang d. 27 april i Kansas City. </p>
-            <h5>Artiklen er skrevet d. 1 marts 2023</h5>
+            <h5>Artiklen er skrevet d. 29 april 2023</h5>
         </article>
 
         <article class="news">
